[1695991] 3.07 - File type Compare now has .bak & .ibak suffixes
[Open Discussion] Fix issue if PWS is maximized/minimized/then restored
[1701508] Entry times no longer written out if not set
[1702623] Compare now shows correct filenames
[] Fix problem with remembering Tree state on restore after minimize
[1678527] Line delimiter now works during import of plain text

New Features for 3.07.01
========================
[1695446] Can't reproduce error "Browse to URL no longer opens new browser" but
allow command line parameters for Alt. Browser; e.g. "-new-tab" for Firefox
[] Implement "Advanced" option for Exporting in XML format (as per Export in Text
format) and for when comparing databases
[1695968] "Advanced" option now available to improve Merge operation  

Bugs fixed in 3.07
=====================
[1684827, 1668493] No longer crashes after you specify to remember 0 databases
[1675716] <ESC> to close application now works
[1673028] Merge operation now fixed
[1673028] Similar problem in Compare operation fixed
[1660721] Autotype menu & shortcut no longer disabled if field is
empty.
[1679461, 1612567] Text in Password field no longer truncated with large
texts.
[1682516] Menu display no longer trashed if accelerator pressed with
an open menu.
[1683060] Autotype now works again for all entries
[1678707] CapsLock temporarily turned off in Autotype
[1681366] Now stays on top during autotype
[1672770] Right-click->unlock on system tray icon now same as
double-clicking on locked system tray icon

New Features for 3.07
=====================
[] - Password expiration notice can now be given a few days prior to
actual expiration
[] - Exported/imported text format is now documented in online help
[1623802] Default Autotype string can be specified per database
[1686819] - PWS may configured not to minimize during
Autotype (Manage->Options->Misc). 'Always on Top' takes precedence.
[] If the PWS_PREFSDIR environment variable is defined, that's where